data fetched from server, displayed in archive and posting correctly to the server

--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,15 @@ body, html {
     height: 35px !important;
     width: 200px !important;
 }
+
+body{
+    height: 100vh
+}
+
+#root {
+    height: 100%;
+}
+
+.card-footer {
+    background-color: #eaeff1;
+}
