--- a/src/style.css
+++ b/src/style.css
@@ -17,13 +17,40 @@ body, html {
 }
 
 body{
-    height: 100vh
+    height: 100vh;
+    background-color: #eaeff1;
 }
 
 #root {
     height: 100%;
+    background-color: #eaeff1;
+
 }
 
 .card-footer {
-    background-color: #eaeff1;
+    background-color: white;
+}
+
+
+.main--input {
+    background-color: white;
+}
+
+.card {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: all .2s ease;
+}
+
+.card:hover {
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+}
+
+.edit-button {
+    opacity: .5;
+    transition: all .2s ease;
+
+}
+
+.edit-button:hover {
+    opacity: 1;
 }
