added modal for post editing but not fetching data yet, closing it also works, edited look of the cards in archive and added edit and copy number icons, added link in the logo in header

--- a/src/style.css
+++ b/src/style.css
@@ -45,12 +45,28 @@ body{
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
 }
 
-.edit-button {
-    opacity: .5;
+.edit-button,
+.copy-button {
     transition: all .2s ease;
-
+    border-color:rgba(0, 0, 0) !important;
+    opacity: 0;
 }
 
-.edit-button:hover {
-    opacity: 1;
+.card:hover .edit-button,
+.card:hover .copy-button {
+    opacity: .55 ;
+}
+
+.card:hover .edit-button:hover,
+.card:hover .copy-button:hover
+ {
+    opacity: .95;
+}
+
+.card-header {
+    transition: all .2s ease;
+}
+
+.card:hover .card-header {
+    background-color: #ffb900 ;
 }
