styled archive, users only have one argument, layout is adapted for mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,11 @@ body{
 
 }
 
+.main {
+    height: 85%;
+    height: -webkit-fill-available;
+}
+
 .card-footer {
     background-color: white;
 }
@@ -44,7 +49,7 @@ body{
 }
 
 .card:hover {
-    box-shadow: 0 0 25px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 35px rgba(0, 0, 0, 0.4);
 }
 
 .edit-button,
