--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,12 @@ body, html {
     font-family: 'Roboto Slab', serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    height: -webkit-fill-available;
 }
 
 .navbar {
     background-color: #3c464b;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 
 .nav-main__logo {
@@ -18,7 +20,7 @@ body, html {
 
 body{
     height: 100vh;
-    min-height: -webkit-fill-available;
+    min-height: -webkit-fill-available !important;
     background-color: #eaeff1;
 }
 
