--- a/src/style.css
+++ b/src/style.css
@@ -42,41 +42,6 @@ body{
     background-color: white;
 }
 
-.card {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    transition: all .2s ease;
-}
-
-.card:hover {
-    box-shadow: 0 0 35px rgba(0, 0, 0, 0.4);
-}
-
-.edit-button,
-.copy-button {
-    transition: all .2s ease;
-    border-color:rgba(0, 0, 0) !important;
-    opacity: 0;
-}
-
-.card:hover .edit-button,
-.card:hover .copy-button {
-    opacity: .55 ;
-}
-
-.card:hover .edit-button:hover,
-.card:hover .copy-button:hover
- {
-    opacity: .95;
-}
-
-.card-header {
-    transition: all .2s ease;
-}
-
-.card:hover .card-header {
-    background-color: #ffb900 ;
-}
-
 .paginator {
     list-style: none;
 }
@@ -104,6 +69,40 @@ body{
 }
 
 .disabled {
-    visibility:collapse !important;
-    width: 0px;
+    visibility: hidden !important;
+}
+
+.edit-button:hover{
+    scale: 1.15;
+}
+
+td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 20ch;
+}
+
+tr {
+    line-height: 1.75rem;
+}
+
+tr:hover:not(thead>tr) {
+    transition: all .1s ;
+}
+
+tr:hover:not(thead>tr) {
+    background-color: hsla(197, 20%, 93%, 0.3) !important;
+    cursor:pointer;
+}
+
+.table {
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: .5rem;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+.strong {
+    font-weight: 600;
+    letter-spacing: 1px;
 }
