redesign of archive table

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body, html {
-    font-family: 'Roboto Slab', serif;
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    height: -webkit-fill-available;
+    min-height: -webkit-fill-available;
 }
 
 .navbar {
     background-color: #3c464b;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    font-family: 'Roboto Slab', serif;
 }
 
 .nav-main__logo {
@@ -20,13 +21,11 @@ body, html {
 
 body{
     height: 100vh;
-    min-height: -webkit-fill-available !important;
-    background-color: #eaeff1;
+    background-color: hsl(205, 12%, 96%);
 }
 
 #root {
     height: 100%;
-    background-color: #eaeff1;
 }
 
 .main {
@@ -44,6 +43,7 @@ body{
 
 .paginator {
     list-style: none;
+    margin: 0;
 }
 
 .paginator>li {
@@ -97,25 +97,75 @@ td {
   }
 
 tr {
-    line-height: 1.75rem;
+    line-height: 2.5rem;
 }
 
 tr:hover:not(thead>tr) {
     transition: all .1s ;
 }
 
-tr:hover:not(thead>tr) {
-    background-color: hsla(197, 20%, 93%, 0.3) !important;
+tr:hover:not(thead>tr):not(tfoot>tr) {
+    background-color: #e1edf5 !important;
     cursor:pointer;
 }
 
+tr:hover:not(thead>tr) td {
+    color: #326680 !important;
+}
+
 .table {
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: .5rem;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    background-color: rgb(255, 255, 255);
+    font-size: .9rem;
+    letter-spacing: -.25px;
+    color: #4a5960;
+    border-radius: 1rem !important;
+    overflow: hidden;
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.07);
+}
+
+.table--head {
+    background-color: #3c464b;
+    color: #858f95;
+    font-weight: 300;
+    line-height: 3.25rem;
+}
+/* 
+.table--foot {
+    background-color: #3c464b;
+
+} */
+
+.table--head>th {
+    font-weight: 400;
 }
 
 .strong {
     font-weight: 600;
-    letter-spacing: 1px;
+    letter-spacing: .25px;
 }
+
+.weak {
+    color:#7a808d
+}
+
+.main--card {
+    border: 2px solid #3c464b1a;
+    box-shadow: 0 0 50px rgb(0 0 0 / 4%);
+    border-radius: 1rem;
+}
+
+th, 
+td {
+    padding: .5rem 1rem !important;
+}
+
+tr>th:first-child, 
+tr>td:first-child {
+    padding-left: 1.5rem !important;
+}
+
+tr>th:last-child, 
+tr>td:last-child {
+    padding-right: 1.5rem !important;
+}
+
