--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body, html {
     font-family: "Roboto","Helvetica","Arial",sans-serif;
@@ -126,7 +127,6 @@ tr:hover:not(thead>tr) td {
 .table--head {
     background-color: #3c464b;
     color: #858f95;
-    font-weight: 300;
     line-height: 3.25rem;
 }
 /* 
@@ -136,7 +136,7 @@ tr:hover:not(thead>tr) td {
 } */
 
 .table--head>th {
-    font-weight: 400;
+    font-weight: 500;
 }
 
 .strong {
