--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,7 @@ body{
     padding: .5rem .75rem;
     margin: .5rem;
     border-radius: .2rem;
+    border: 2px solid #9096a14d;
     background-color: white;
     display: flex;
     align-items: center;
@@ -119,13 +120,13 @@ tr:hover:not(thead>tr) td {
     font-size: .9rem;
     letter-spacing: -.25px;
     color: #4a5960;
-    border-radius: 1rem !important;
+    border-radius: 0 0 1rem 1rem !important;
     overflow: hidden;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.07);
 }
 
 .table--head {
-    background-color: #3c464b;
+    background-color: hsl(200, 11%, 30%);
     color: #858f95;
     line-height: 3.25rem;
 }
@@ -169,3 +170,22 @@ tr>td:last-child {
     padding-right: 1.5rem !important;
 }
 
+.search-container {
+    background-color: #3c464b;
+    border-radius: 1rem 1rem 0 0;
+}
+
+.main--search-input {
+    border: 2px solid #5d6b72c2;
+    background-color: #2a3134;
+    color: hsl(203, 7%, 65%);
+    font-weight: 500;
+}
+
+.main--search-input:hover,
+.main--search-input:focus {
+    border-width: 2px;
+    background-color: #2a3134;
+    color: hsl(203, 7%, 65%);
+    font-weight: 500;
+}
