table header flex fix

--- a/src/style.css
+++ b/src/style.css
@@ -233,7 +233,9 @@ tr>td:last-child {
     letter-spacing: -.5px;
     border-radius: .5rem;
     color: #3c464b;
-    background-color: #f0f0f0;   
+    background-color: #f0f0f0;
+    font-weight: 600;
+  
 }
 
 .new-post-counter.active {
@@ -247,5 +249,5 @@ light {
 
 .new-project-counter-icon {
     position: relative;
-    top: -.5px
+    top: -2px
 }
