--- a/src/style.css
+++ b/src/style.css
@@ -260,29 +260,33 @@ light {
 
 .status-0{
     color:hsl(45, 100%, 43%);
-    padding: .5rem;
+    padding: .5rem .75rem;
     border-radius: 2rem;
     background-color: hsla(45, 100%, 45%, 0.25);
 }
 
 .status-1{
     color:hsla(174, 34%, 49%, 1);
-    padding: .5rem;
+    padding: .5rem .75rem;
     border-radius: 2rem;
     background-color: hsla(174, 34%, 49%, 0.25);
 }
 
 .status-2{
     color:hsla(1, 60%, 46%, 0.8);
-    padding: .5rem;
+    padding: .5rem .75rem;
     border-radius: 2rem;
     background-color: hsla(1, 60%, 46%, 0.25);
 }
 
 .status-3{
     color: hsla(16, 12%, 57%, 0.8);
-    padding: .5rem;
+    padding: .5rem .75rem;
     border-radius: 2rem;
     background-color: hsla(16, 12%, 57%, 0.25);
+}
+
+.status-undefined {
+    display: none;
 }
 
