--- a/src/style.css
+++ b/src/style.css
@@ -47,33 +47,42 @@ body{
     margin: 0;
 }
 
-.paginator>li {
-    height: 2rem;
-    min-width: 2rem;
+.paginator>li>a {
+    height: 2.25rem;
+    min-width: 2.25rem;
+    padding: .5rem;
     display: flex;
     justify-content: center;
     width: auto;
-    margin: .5rem;
-    border-radius: .5rem;
-    border: 1px solid #9096a12f;
+    margin: .5rem 0rem;
+    border-top: 1px solid #9096a12f;
+    border-bottom: 1px solid #9096a12f;
     background-color: white;
     display: flex;
     align-items: center;
     color: var(--bs-dark)
 }
 
+.paginator>li:first-child>a {
+    border-left: 1px solid #9096a12f;
+    border-radius: .5rem 0 0 .5rem;
+}
+
+.paginator>li:last-child>a {
+    border-right: 1px solid #9096a12f;
+    border-radius: 0 .5rem .5rem 0;
+}
+
+
 .paginator>li * {
     text-decoration: none;
     color: var(--bs-dark)
 }
 
-.selected {
-    background-color: var(--bs-yellow) !important;
+.selected>a {
+    background-color: #e1edf5  !important;
+    color: #4a5960 !important;
     font-weight: 700;
-}
-
-.disabled {
-    border: 1px solid #9096a11e !important;
 }
 
 .disabled>a {
@@ -101,7 +110,7 @@ td {
   }
 
 tr {
-    line-height: 2.4rem;
+    line-height: 2.5rem;
 }
 
 tr:hover:not(thead>tr) {
@@ -109,7 +118,7 @@ tr:hover:not(thead>tr) {
 }
 
 tr:hover:not(thead>tr):not(tfoot>tr) {
-    background-color: hsl(204, 50%, 95%) !important;
+    background-color: #e1edf5 !important;
     cursor:pointer;
 }
 
@@ -135,8 +144,7 @@ tr:hover:not(thead>tr) td {
 .table--head {
     background-color: hsl(0, 0%, 96%);
     color: #858f95;
-    line-height: 1.25rem;
-    height: 1rem !important;
+    line-height: 2rem;
 }
 /* 
 .table--foot {
@@ -146,6 +154,7 @@ tr:hover:not(thead>tr) td {
 
 .table--head>th {
     font-weight: 500;
+    opacity: .75
 }
 
 .strong {
@@ -154,8 +163,7 @@ tr:hover:not(thead>tr) td {
 }
 
 .weak {
-    color:#7a808d;
-    font-weight: 300;
+    color:#7a808d
 }
 
 .main--card {
@@ -190,7 +198,8 @@ tr>td:last-child {
 
 .main--search-input {
     border: 2px solid hsl(0, 0%, 94%);
-    background-color: #f0f0f0;
+    border-left: none !important;
+    background-color: #ffffff;
     color: hsl(203, 7%, 60%);
     font-weight: 500;
     border-radius: .5rem;
@@ -204,14 +213,14 @@ tr>td:last-child {
 .main--search-input:focus {
     border-width: 2px;
     border-color: #cbdae4;
-    background-color: hsl(0, 0%, 94%);
     color: hsl(198, 14%, 50%);
     font-weight: 500;
 }
 
 .main--search-bar .btn {
-    background-color: hsl(0, 0%, 94%) !important;
-    border: none !important;
+    background-color: hsl(0, 0%, 100%) !important;
+    border: 2px solid hsl(0, 0%, 94%) !important;
+    border-right: none !important;
     color: hsl(203, 7%, 70%);
 }
 
@@ -261,30 +270,35 @@ light {
     top: -2px
 }
 
-#status-0{
+.status-0{
     color:hsl(45, 100%, 43%);
-    background-color: hsla(45, 100%, 45%, 0.2);
+    padding: .5rem .75rem;
+    border-radius: 2rem;
+    background-color: hsla(45, 100%, 45%, 0.25);
 }
 
-#status-1{
+.status-1{
     color:hsla(174, 34%, 49%, 1);
-    background-color: hsla(174, 34%, 49%, 0.2);
+    padding: .5rem .75rem;
+    border-radius: 2rem;
+    background-color: hsla(174, 34%, 49%, 0.25);
 }
 
-#status-2{
+.status-2{
     color:hsla(1, 60%, 46%, 0.8);
-    background-color: hsla(1, 60%, 46%, 0.2);
+    padding: .5rem .75rem;
+    border-radius: 2rem;
+    background-color: hsla(1, 60%, 46%, 0.25);
 }
 
-#status-3{
+.status-3{
     color: hsla(16, 12%, 57%, 0.8);
-    background-color: hsla(16, 12%, 57%, 0.2);
+    padding: .5rem .75rem;
+    border-radius: 2rem;
+    background-color: hsla(16, 12%, 57%, 0.25);
 }
 
 .status-undefined {
     display: none;
 }
 
-table.table {
-    margin-bottom: 0;
-}
