--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ body, html {
 
 body{
     height: 100vh;
-    background-color: hsl(205, 30%, 96%);
+    background-color: hsl(229, 80%, 99%);
 }
 
 #root {
@@ -118,18 +118,23 @@ tr:hover:not(thead>tr) {
 }
 
 :root{
-    --ps-table-hover-bg: hsl(210, 40%, 97%);
+    --ps-table-hover-bg: hsl(210, 50%, 97%);
     --ps-table-hover-color: hsl(215, 36%, 50%);
     --ps-table-border-color: hsl(210, 30%, 94%);
     --ps-border-color: hsl(210, 30%, 90%);
-    --ps-border-hover-color: hsl(210, 50%, 80%);
+    --ps-border-hover-color: hsl(210, 45%, 75%);
     --ps-color: hsl(200, 11%, 26%);
+    --ps-color-50: hsl(200, 10%, 70%);
     --ps-table-head-bg: hsl(210, 40%, 98%);
-    --ps-table-head-color: hsl(215, 16%, 47%);
+    --ps-table-head-color: hsl(215, 16%, 52%);
 }
 
 .border {
 	border: var(--bs-border-width) var(--bs-border-style) var(--ps-border-color) !important;
+}
+
+.bg-secondary {
+	background-color: var(--ps-table-head-color) !important;
 }
 
 .table-ps {
@@ -157,6 +162,27 @@ tr:hover:not(thead>tr) {
 .form-control:focus {
 	color: var(--ps-table-hover-color);
 	border: 1px solid var(--ps-border-hover-color) !important;
+}
+
+.main--search-bar>div {
+    box-shadow: 0 0 5px hsl(199, 13%, 97%);
+    border-radius: .5rem;
+}
+
+.main--search-bar * {
+    color: var(--ps-color-50) ;
+}
+
+.main--search-bar input::placeholder {
+    color: var(--ps-color-50) ;
+}
+
+.main--search-bar input:hover::placeholder {
+    color: var(--ps-table-hover-color);
+}
+
+.main--search-bar>div:hover {
+    box-shadow: 0 0 10px hsl(199, 13%, 95%);
 }
 
 .btn:hover {
@@ -252,8 +278,9 @@ tr>td:last-child {
 .main--search-input {
     border-left: none !important;
     background-color: #ffffff;
-    color: hsl(203, 7%, 60%);
+    color: var(--ps-table-hover-color);
     border-radius: .5rem;
+    font-weight: 500;
 }
 
 
@@ -309,14 +336,14 @@ light {
 }
 
 span#status-0{
-    color:hsl(200, 92%, 35%);
+    color:hsl(210, 50%, 50%);
     /* border: 1px solid hsla(45, 100%, 30%, 0.5); */
     border-radius: 2rem;
-    background-color: hsl(200, 92%, 90%);
+    background-color: hsl(210, 50%, 90%);
 }
 
 span#status-1{
-    color:hsl(174, 34%, 30%);
+    color:hsl(174, 34%, 40%);
     /* border: 1px solid hsla(174, 34%, 30%, 0.5); */
     border-radius: 2rem;
     background-color: hsla(174, 34%, 49%, 0.25);
@@ -329,38 +356,26 @@ span#status-2{
     background-color: hsla(1, 60%, 46%, 0.25);
 }
 
-span#status-3{
-    color: hsla(16, 12%, 57%);
-    border: px solid hsla(16, 12%, 57%, 0.5);
-    border-radius: 2rem;
-    background-color: hsla(16, 12%, 57%, 0.25);
-}
-
-.status-undefined {
-    display: none;
-}
-
-
 
 /* modal */
 
 button#status-0{
     /* background-color: hsla(45, 100%, 45%, 0.05); */
-    border: 1px solid hsla(45, 100%, 23%, .5);
-    color: hsla(45, 100%, 23%, 0.7);
+    border: 1px solid hsla(210, 50%, 50%);
+    color: hsla(210, 50%, 50%);
     transition: all .25s ease-in;
 }
 
 button#status-0.Mui-selected{
-    background-color: hsla(45, 100%, 45%, 0.2);
-    color:hsl(45, 100%, 33%);
-    border: 1px solid hsl(45, 100%, 43%);
+    background-color: hsla(210, 50%, 50%, 0.2);
+    border: 1px solid hsla(210, 50%, 50%);
+    color: hsla(210, 50%, 50%);
 }
 
 button#status-1{
     /* background-color: hsla(174, 34%, 49%, 0.05); */
     border: 1px solid hsla(174, 34%, 30%, .5);
-    color:hsla(174, 34%, 30%, 0.7);
+    color:hsla(174, 34%, 49%);
     transition: all .25s ease-in;
 
 }
@@ -373,16 +388,16 @@ button#status-1.Mui-selected{
 
 button#status-2{
     /* background-color: hsla(1, 60%, 46%, 0.05); */
-    border: 1px solid hsla(1, 60%, 33%, 0.5);
-    color:hsla(1, 60%, 33%, 0.7);
+    border: 1px solid hsla(1, 60%, 40%);
+    color:hsla(1, 60%, 40%);
     transition: all .25s ease-in;
 
 }
 
 button#status-2.Mui-selected{
-    background-color: hsla(1, 60%, 46%, 0.2);
-    color:hsla(1, 60%, 36%, 0.8);
-    border: 1px solid hsla(1, 60%, 46%, 0.8);
+    background-color: hsla(1, 60%, 40%, .2);
+    color:hsla(1, 60%, 40%);
+    border: 1px solid hsla(1, 60%, 40%, 0.8);
 }
 
 .modal--status-switch>span {
